# crates/server/src/openapi.rs
@@ -6,12 +6,12 @@ use voxnexus_protocol::{
     AccountResponse, AddSpaceMemberRequest, AuthSessionResponse, ChangeEmailRequest,
     ChangePasswordRequest, CommunityListResponse, CommunityMemberListResponse,
     CommunityMemberResponse, CommunityResponse, CreateCommunityRequest, CreateInviteRequest,
-    CreateSpaceRequest, ErrorBody, InstanceSettingsResponse, InviteExpireAfter, InviteExpireUnit,
-    InviteListResponse, InvitePreviewResponse, InviteResponse, LoginRequest, MetaResponse,
-    PresenceEntry, PresenceListResponse, ProfileResponse, RegisterRequest, SpaceListResponse,
-    SpaceMemberListResponse, SpaceMemberResponse, SpaceResponse, UpdateCommunityRequest,
-    UpdateInstanceSettingsRequest, UpdateInviteRequest, UpdateNicknameRequest,
-    UpdateProfileRequest, UpdateSpaceRequest,
+    CreateSpaceRequest, DeleteCommunityRequest, ErrorBody, InstanceSettingsResponse,
+    InviteExpireAfter, InviteExpireUnit, InviteListResponse, InvitePreviewResponse, InviteResponse,
+    LoginRequest, MetaResponse, PresenceEntry, PresenceListResponse, ProfileResponse,
+    RegisterRequest, SpaceListResponse, SpaceMemberListResponse, SpaceMemberResponse,
+    SpaceResponse, TransferCommunityRequest, UpdateCommunityRequest, UpdateInstanceSettingsRequest,
+    UpdateInviteRequest, UpdateNicknameRequest, UpdateProfileRequest, UpdateSpaceRequest,
 };
 
 use crate::auth;
@@ -47,6 +47,8 @@ use crate::spaces;
         communities::list_communities,
         communities::get_community_by_id,
         communities::update_community_settings,
+        communities::transfer_community,
+        communities::delete_community,
         communities::upload_community_icon,
         communities::upload_community_banner,
         communities::get_community_icon,
@@ -86,6 +88,8 @@ use crate::spaces;
         UpdateInstanceSettingsRequest,
         CreateCommunityRequest,
         UpdateCommunityRequest,
+        TransferCommunityRequest,
+        DeleteCommunityRequest,
         UpdateNicknameRequest,
         CreateInviteRequest,
         UpdateInviteRequest,
